Fixes position of fixing buttons on mobile.

--- a/client/landing/jetpack-cloud/components/threat-item/style.scss
+++ b/client/landing/jetpack-cloud/components/threat-item/style.scss
@@ -16,11 +16,13 @@
 	&__buttons {
 
 		justify-content: space-evenly;
+		order: -1;
+		padding: 20px 0;
 
 		@include breakpoint( '>800px' ) {
 			justify-content: flex-end;
-			padding-right: 48px;
-			padding-left: 20px;
+			padding: 0 48px 0 20px;
+			order: initial;
 		}
 	}
 
@@ -57,7 +59,12 @@
 	}
 
 	&.foldable-card.is-expanded .foldable-card__content {
-		display:flex;
+		display: flex;
+		flex-direction: column;
+
+		@include breakpoint( '>800px' ) {
+			flex-direction: row;
+		}
 	}
 }
 
